--- a/Assignment02.ipynb
+++ b/Assignment02.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "This script demonstrates the first order Taylor expansion of a given function\n",
     "\n",
-    "Name : So-Jeong An\n",
+    "Name : Sojung An\n",
     "\n",
-    "Student ID : 2018120203"
    ]
   },
   {
